size-full, alignright fix

--- a/site/web/app/themes/IH/resources/assets/styles/common/_global.scss
+++ b/site/web/app/themes/IH/resources/assets/styles/common/_global.scss
@@ -234,7 +234,7 @@ hr {
 figure {
   width: inherit !important;
 
-  img {
+  img:not(.size-full) {
     height: auto;
     width: 100%;
   }
